--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
         
         <nav>
 
+            <button id="box0"></button>
             <button id="box1"></button>
-            <button id="box2"></button>
-            <button id="box3"></button><br>
+            <button id="box2"></button><br>
+            <button id="box3"></button>
             <button id="box4"></button>
-            <button id="box5"></button>
-            <button id="box6"></button><br>
+            <button id="box5"></button><br>
+            <button id="box6"></button>
             <button id="box7"></button>
             <button id="box8"></button>
-            <button id="box9"></button>
 
             <p id="print"></p>
 
             <br>
 
-            <!-- <button class="reset">RESET</button> -->
+            <button class="reset">RESET</button>
         </nav>
         
 
     </main>
 
     <footer>
-
+        <p id="winner"></p>
 
     </footer>
     <script src="js/jquery.js"></script>
