--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="tictactoe.css">
-    <audio id="" src=""></audio>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Poiret+One&display=swap');</style>
 </head>
 
 <body>
@@ -50,7 +50,6 @@
         <p id="winner"></p>
 
         <div id="modalBox">
-            <!-- <button class="resetModal">PLAY AGAIN</button> -->
             <button class="reset">PLAY AGAIN</button>
             <p id="popup"></p>
         </div>
